# bveri_miniprojekt

./: README.md  data_exploration.ipynb  my_model.ipynb  suim.ipynb  suim_net.ipynb  suim_vgg.ipynb
src/: pyproject.toml
src/underwater_imagery/data/: constants.py  transf.py  uim_dataset.py
src/underwater_imagery/models/: encoder_decoder.py  iou_loss.py  metrics.py  train_model.py
src/underwater_imagery/models/my_net/: my_decoder.py  my_encoder.py  my_net.py
src/underwater_imagery/models/suim_net/: rsb.py  suim_decoder.py  suim_encoder.py  suim_net.py
underwater_imagery/: pyproject.toml
underwater_imagery/tests/: cuda_test.py
underwater_imagery/underwater_imagery/: uim_dataset.py
underwater_imagery/underwater_imagery/models/: model.py
